@@ -67,7 +67,7 @@ perl           => /usr/bin, @NODEPS@
 perl6          => /usr/bin, rakudo
 plackup        => /usr/bin, libplack-perl
 procmail       => /usr/bin
-python         => /usr/bin, python | python-minimal
+python         => /usr/bin, python:any | python-minimal:any
 pforth         => /usr/bin
 racket         => /usr/bin
 r              => /usr/bin, littler
