@@ -1,0 +1,12 @@
+#!/usr/bin/make -f
+
+%:
+	dh $@
+
+override_dh_auto_build:
+	mkdir man
+	for FILE in *-script ; do \
+		sed s/@SCRIPT@/$$FILE/g script.pod | \
+			pod2man --section=1 > man/$$FILE.1 ; \
+	done
+
