@@ -1,0 +1,6 @@
+Testname: scripts-missing-dep-fp
+Sequence: 6000
+Version: 1.0
+Description: Check F-P missing dep on various script interpreters
+Test-Against: python-script-but-no-python-dep
+
